--- a/history.html
+++ b/history.html
@@ -87,9 +87,10 @@
                                 <p style="margin-bottom: 0px;">Co-President -&nbsp;Becky Langdon<br></p>
                                 <p style="margin-bottom: 0px;">Co-President -&nbsp;Mahika Dixit<br></p>
                                 <p style="margin-bottom: 0px;">Treasurer -&nbsp;Eleanor Sheridan&nbsp;</p>
-                                <p style="margin-bottom: 0px;">Secretary&nbsp;-&nbsp;Martina Orvošová<br></p>
+                                <p style="margin-bottom: 0px;">Secretary&nbsp;-&nbsp;Kyanna Ouyang<br></p>
                                 <p style="margin-bottom: 0px;">Academic Affairs Officer&nbsp;-&nbsp;Dilyara Sabirova<br></p>
-                                <p style="margin-bottom: 0px;">Events Officer&nbsp;-&nbsp;Marina <br></p>
+                                <p style="margin-bottom: 0px;">Events Officer&nbsp;-&nbsp;Marina Rodriguez Lopez<br></p>
+                                <p style="margin-bottom: 0px;">Publicity Officer&nbsp;-&nbsp;Ahu Aydin<br></p>
                                 <p style="margin-bottom: 0px;">Webmaster&nbsp;-&nbsp;Hamilton Allport<br></p>
                             </section>
                             <section style="margin-top: 32px;">
